--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A base Web Server built with node.js using express.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node src/index.js"
   },
   "repository": {
     "type": "git",
